--- a/wp-content/themes/subareva/src/scss/main.scss
+++ b/wp-content/themes/subareva/src/scss/main.scss
@@ -245,6 +245,67 @@ video{
     }
   }
 }
+.success-send{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 99;
+  @media all and (max-width: 1020px){
+    padding: 50px;
+  }
+  @media all and (max-width: 768px){
+    padding: 35px;
+  }
+  @media all and (max-width: 500px){
+    padding: 20px;
+  }
+  &__popup{
+    padding: 50px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 130%;
+    text-align: center;
+    color: #15223D;
+    margin-bottom: 0.4rem;
+    background: #131E30;
+    border-radius: 31px;
+    background: linear-gradient(108.05deg, #E9ECF0 0%, #E9ECF0 100.81%, #E9ECF0 100.81%);
+    box-shadow: inset 0px 1px 0px #FFFFFF;
+    filter: drop-shadow(0px 90px 98px rgba(0, 0, 0, 0.05));
+    backdrop-filter: blur(3px);
+  }
+}
+.thanks{
+  #myVideo{
+    max-width: 635px;
+    width: 80vw;
+  }
+  &__content{
+    z-index: 1;
+    width: 100%;
+    max-width: 900px;
+    padding: 0 50px;
+    text-align: center;
+  }
+  &__title{
+
+  }
+  &__subtitle{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    max-width: 440px;
+    text-align: center;
+    margin: 35px auto 0 auto;
+  }
+  &__buttons{
+    margin-top: 66px;
+  }
+}
 
 @import "templates/pages";
 @import "templates/header";
